[tool.poetry]
name = "polygon-python-egorgur"
version = "0.1.0"
description = ""
authors = ["Egor Gurtyakin <yoda_2005@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
